# change_monitor

./: .pre-commit-config.yaml  README.md  pyproject.toml
change_monitor/: __init__.py  __main__.py  change.py  event_handler.py  gm.py
change_monitor/gerrit/: event_provider.py  events.py
gerrit_monitor/: gm.py
gerrit_monitor/gerrit/: events.py  structures.py
tests/: test_gerrit_monitor.py
