[tool.poetry]
name = "change_monitor"
version = "0.1.0"
description = ""
authors = ["Jimmie Hogklint <hogklint@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
paramiko = "^2.7.2"
gevent = "^21.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
